# moraltimemachine

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  auth.py  claude.py  config.py  db.py  models.py  orchestrator.py  prompts.py  sessions.py
frontend/: .env.example  .gitignore  .prettierrc  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.css  app.html
frontend/src/lib/: dimension-icons.ts  examples.ts  markdown.ts  questionnaire.ts  stages.ts
frontend/src/lib/api/: admin.ts  backup.ts  client.ts  index.ts  mock.ts  types.ts
frontend/src/lib/components/: admin-answers.svelte  back-button.svelte  chat-message.svelte  detail-panel.svelte  harm-lens-matrix.svelte  harm-tag.svelte  key-gate.svelte  reflection-card.svelte  report-preview.svelte  risk-detail.svelte  stage-nav.svelte  stakeholder-burden.svelte  variant-switcher.svelte  view-switcher.svelte
frontend/src/lib/stores/: admin.svelte.ts  participant.svelte.ts  prolific.svelte.ts  session.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/explore/: +page.svelte
frontend/src/routes/export/: +page.svelte
frontend/src/routes/feedback/: +page.svelte
paper/figures/: make_results_figures.py
rag/: aiaaic.py  chunker.py  cli.py  embedder.py  indexer.py  retriever.py  schema.py
scripts/: compare_rankings.py  export_study_data.py  extract_pdfs.py  fetch_aiaaic.py  mint_keys.py
(+10 files in other folders)
