[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0,<2.0",
    "chromadb>=0.5,<0.6",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "sentence-transformers>=2.7,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.69",
]
figures = ["matplotlib>=3.9", "scipy>=1.13"]

[project.scripts]
rag-query = "rag.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag*"]
exclude = ["front*", "back*", "server*", "scripts*", "tests*"]
